<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Notifications">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications_global"
            android:title="@string/pref_title_notifications_global" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications_global"
            android:title="@string/pref_title_notifications_saved_events" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications_global"
            android:title="@string/pref_title_notifications_organizations" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifications_global"
            android:title="@string/pref_title_notifications_categories" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="notifications_global"
            android:title="@string/pref_title_notifications_events" />

    </PreferenceCategory>

</PreferenceScreen>
