<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/midnightBlue"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_image_height"
        android:id="@+id/organizationBannerPhoto"
        android:src="@drawable/bucknell_student_alumni_virtual_networking_event" />

    <Gallery
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gallery"
        android:layout_gravity="center_horizontal" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/mainDetailLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/organizationLogoImage"
                android:layout_width="131dp"
                android:layout_height="178dp"
                android:gravity="center"
                android:src="@drawable/ace"
                android:layout_marginStart="@dimen/section_margin_left"
                />

            <LinearLayout
                android:id="@+id/textDetailLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/section_margin_left" >

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/organizationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/page_title_text_size"
                    android:textStyle="bold"/>

            </LinearLayout>
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:columnCount="2"
            android:layout_gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/follow_update"
                android:text="@string/follow_updates"
                android:layout_row="0"
                android:layout_column="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contact_organization"
                android:text="@string/contact"
                android:layout_row="0"
                android:layout_column="1" />
        </GridLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/organizationDescription"
        android:layout_marginStart="@dimen/section_margin_left"
        android:layout_marginEnd="@dimen/section_margin_right"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/section_title_height"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            android:text="@string/upcoming_events"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/card_view_total_height"
            android:orientation="horizontal" >

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view_1" >
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
