<?xml version="1.0" encoding="utf-8"?>

<!--
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_home"
    tools:context="edu.bucknell.binvolved.HomeActivity">
    
<!--
    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:text="Click me to go to EVENT list view"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:text="Click me to go to ORGANIZATION list view"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:text="Click me to go to CATEGORY list view"/>
-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_image_height">

        <ViewFlipper
            android:id="@+id/view_flipper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_image_height"
                android:id="@+id/bannerPhoto_1" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_image_height"
                android:id="@+id/bannerPhoto_2" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_image_height"
                android:id="@+id/bannerPhoto_3" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_image_height"
                android:id="@+id/bannerPhoto_4" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_image_height"
                android:id="@+id/bannerPhoto_5" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_image_height"
                android:id="@+id/bannerPhoto_6" />
        </ViewFlipper>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="130dp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/dots"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical|center_horizontal" />

        </RelativeLayout>
    </FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/section_title_height"
        android:textAlignment="center"
        android:textColor="@color/midnightBlue"
        android:text="@string/your_top_10"
        android:textStyle="bold"
        android:background="@drawable/back"
        android:gravity="center"
        android:paddingTop="1dip"
        android:paddingBottom="1dip"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/section_margin_right"
        android:layout_marginStart="@dimen/section_margin_left">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:text="@string/categories"/>

            <Button
                android:id="@+id/more_categories"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/more_button_height"
                android:layout_gravity="end"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:text="@string/more"
                android:textColor="@color/white"
                android:background="@color/midnightBlue" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_total_height"
            android:orientation="horizontal">

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view_1" >
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="@dimen/section_margin_right"
        android:layout_marginStart="@dimen/section_margin_left">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/section_title_height"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/section_margin_left"
                android:textStyle="bold"
                android:text="@string/upcoming_events"/>

            <Button
                android:id="@+id/more_upcoming_events"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/more_button_height"
                android:layout_gravity="end"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/section_margin_right"
                android:text="@string/more"
                android:textColor="@color/white"
                android:background="@color/midnightBlue" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_view_total_height"
            android:orientation="horizontal">

            <android.support.v7.widget.RecyclerView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view_2" >
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
